# start-app-launcher-rust

./: Cargo.toml  README.md  launcher.json
src/: main.rs
