[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
libc = "0.2"

[target.x86_64-unknown-linux-gnu]
linker = "gcc"

[[bin]]
name = "launcher"
path = "src/main.rs"